Add missing feadback translations
Add edit and update strings for feedbacks.

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -17,6 +17,8 @@ project:
         report_bug: 'Reporter un bug'
         propose_evolution: 'Proposer une évolution'
         create: 'Valider'
+        edit: 'Editer'
+        update: 'Mettre à jour'
     status:
         to_specify: 'À spécifier'
         ready: 'Prêt'
