Implement admin dashboard with server creation and user dashboard with servers list

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -1,7 +1,14 @@
 full_date: 'F j, Y H:i'
 website_name: 'Kalaxia'
+homepage: 'Home'
 registration: 'Sign up'
 connection: 'Sign in'
+
+admin:
+    dashboard: 'Administration'
+    
+user:
+    dashboard: 'Dashboard'
 
 project:
     board: 'Project manager'
