--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -40,6 +40,9 @@ project:
         created_at: 'posté le %date%'
         
         
+notifications:
+    all: 'Toutes les notifications'
+        
 game:
     available_servers: 'Serveurs en cours'
     next_servers: 'Serveurs à venir'
