Update server creation form

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -51,6 +51,7 @@ game:
         create: 'Créer un nouveau serveur'
         join: "S'inscrire"
         name: 'Nom'
+        host: 'Adresse'
         description: 'Description'
         banner: 'Bannière'
         started_at: 'Date de lancement'
