--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -64,3 +64,7 @@ security:
         password:   'Mot de passe'
         submit:     'Connexion'
         remember_me:    'Se souvenir de moi'
+        
+    registration:
+        welcome: 'Créer votre compte'
+        submit: 'Valider'
