--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -49,7 +49,8 @@ game:
     my_servers: 'My servers'
     server:
         create: 'Create a new server'
-        join: "Register"
+        join: 'Register'
+        play: 'Play'
         name: 'Name'
         host: 'Host'
         description: 'Description'
