--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -1,10 +1,17 @@
 ---
 full_date: 'd/m/Y \à H:i'
 website_name: 'Kalaxia'
-homepage: 'Accueil'
 registration: 'Inscription'
 connection: 'Connexion'
 anonymous: 'Visiteur'
+
+homepage:
+    title: 'Accueil'
+    description:
+        title: 'Kalaxia est un jeu multijoueurs de stratégie spatiale 100% opensource, 100% gratuit et 100% conçu par sa communauté'
+        join_discord: 'Rejoindre la communauté sur Discord'
+        play_game: 'Jouer à Kalaxia'
+        read_info: 'Fonctionnement de la communauté'
 
 admin:
     dashboard: 'Administration'
