Add the reset password link.

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -125,6 +125,7 @@ security:
         submit:     'Log in'
         remember_me:    'Remember me'
         already_logged_in: 'You are already logged in !'
+        forgotten_password: 'Reset your password.'
 
     registration:
         welcome:    'Create your account'
