Update Mobility Navigation

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -19,6 +19,7 @@ admin:
 user:
     dashboard: 'Mon espace'
     account: 'Mon compte'
+    connect: 'Identifiez-vous'
 
 project:
     board: 'Gestionnaire de projet'
