--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -140,7 +140,7 @@ security:
         submit:     'Connexion'
         remember_me:    'Se souvenir de moi'
         already_logged_in: 'Vous êtes déjà connecté !'
-        forgotten_password: 'Réinitialiser le mot de passe.'
+        forgotten_password: 'Mot de passe oublié'
 
     registration:
         welcome: 'Créer votre compte'
