--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -122,6 +122,7 @@ polls:
     goto: 'Voir'
     other_polls: 'Autres votes'
     not_user: 'Vous devez être connecté pour participer au vote'
+    results: '%value% (%score%% de %nbVotes% votes)'
 
 profile:
     dashboard: 'Mon Profil'
