Implement faction color in creation form

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -164,6 +164,7 @@ game:
         list: 'Factions'
         name: 'Nom'
         description: 'Description'
+        color: 'Couleur'
         create: 'Nouvelle faction'
         validate: 'Valider'
 
