Implement cards reloading on project board

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -83,6 +83,7 @@ project:
 
     feedback:
         title: 'Intitulé'
+        search: 'Rechercher'
         description: 'Description'
         status: 'Statut'
         author: 'Auteur'
