Update server creation form and server host retrieval logic

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -163,6 +163,7 @@ game:
         play: 'Jouer'
         name: 'Nom'
         host: 'Adresse'
+        subdomain: 'Sous-domaine'
         description: 'Description'
         banner: 'Bannière'
         started_at: 'Date de lancement'
