Implement players count per opened server

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -170,6 +170,7 @@ game:
         started_at: 'Date de lancement'
         public_key: 'Clé publique RSA'
         validate: 'Valider'
+        nb_players: '%nb_players% joueurs'
 
     tutorial:
         launch: 'Lancer le tutoriel'
